<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clef"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <Spinner
        android:id="@+id/spinnerClef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_signature"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <Spinner
        android:id="@+id/spinnerKeySig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_signature"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <Spinner
        android:id="@+id/spinnerTimeSig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
